fix hover overflow

--- a/wp-content/themes/ri-fusion-child/style.css
+++ b/wp-content/themes/ri-fusion-child/style.css
@@ -43,11 +43,11 @@ Use it to make something cool, have fun, and share what you've learned with othe
 .photo-index .photo-cats article.cat {
   position: relative;
   flex: 1 0 50%;
-  min-height: 400px;
-  padding: 20px;
+  min-height: 200px;
+  padding: 10px;
   text-align: center;
   background: #696969;
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 .photo-index .photo-cats article.cat::after {
   content: '';
@@ -67,6 +67,14 @@ Use it to make something cool, have fun, and share what you've learned with othe
   -o-transform: scale(1.05);
   transform: scale(1.05);
 }
+.photo-index .photo-cats article.cat .cat-bg-wrap {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
 .photo-index .photo-cats article.cat .cat-bg {
   position: absolute;
   height: 100%;
@@ -79,6 +87,7 @@ Use it to make something cool, have fun, and share what you've learned with othe
   background-position: center center;
   background-repeat: no-repeat;
   transition: transform .2s ease-in;
+  will-change: transform;
 }
 .photo-index .photo-cats article.cat h4 {
   font-weight: bold;
@@ -103,7 +112,19 @@ Use it to make something cool, have fun, and share what you've learned with othe
   padding: 16px;
 }
 @media screen and (min-width: 768px) {
+  .photo-index .photo-cats article.cat {
+    min-height: 300px;
+    padding: 15px;
+  }
   .photo-index .photo-cats article.cat h4 {
     font-size: 48px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .photo-index .photo-cats article.cat {
+    padding: 20px;
+  }
+  .photo-index .photo-cats article.cat {
+    min-height: 400px;
   }
 }
